# uploadpilot

./: .gitignore  Dockerfile.ui  README.md  buildpush.sh  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  wf.yaml  workflow1.yaml
agent/: .air.toml  .env.example  go.mod  go.sum
agent/cmd/: main.go
agent/companion/: config.js  index.js
agent/web/: handlers.go  init.go  middlewares.go  utils.go
casbinpoc/: go.mod  go.sum
common/: go.mod  go.sum
companion/: .env.example  Dockerfile  config.js  index.js  package-lock.json  package.json
core/: go.mod  go.sum
core/cmd/: main.go
core/config/: config.go  dev.env  prod.env
core/init/: init.go
demo/: package-lock.json  package.json
docker/: .Dockerfile.agent  .Dockerfile.manager  .Dockerfile.momentum  .Dockerfile.uploader  .Dockerfile.uploadercomp
examples/: next.config.mjs
go-common/: go.mod
lambdas/: format.md
lambdas/event_helper/: __init__.py  pyproject.toml  readme.md  setup.py
lambdas/event_helper/event_helper/: __init__.py  helper.py
manager/: .env  .env.example  go.mod  go.sum
momentum/: .air.toml  .env  go.mod  go.sum  readme.md
poc/: go.mod  go.sum  index.html  main.go
server/: go.mod  go.sum
ui/: .env  .prettierrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
ui/src/: .env  (+4 more)
uploader/: .Dockerfile  .env  .env.prod  .gitignore  docker-compose.yaml  entry.sh  go.mod  go.sum
uploadpilot/: .env.example  Dockerfile  Dockerfile.admin  Dockerfile.both  Dockerfile.uploader  Dockerfile.uploader.prod  chunk.md  go.mod  go.sum  uploader-entry.sh
(+1077 files in other folders)
