[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event_helper"
version = "0.1.0"
authors = [{ name = "UploadPilot", email = "dev@uploadtpilot.com" }]
description = "A local package with event processing decorators."
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
license = {text = "MIT"}
